<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.QuizQuestionsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:textColor="#363a43"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_margin="16dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#363a43"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:text="@string/Question_0_9" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/clock"
                android:src="@drawable/ic_clock" />

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:textColor="#363a43"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:text="44 S" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:textColor="#363a43"
            android:layout_margin="16dp"
            android:gravity="center"
            tools:text="What country does this flag belong to ?"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/quiz_image"
            tools:src="@drawable/ic_flag_of_germany"/>


        <LinearLayout
            android:id="@+id/llOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/default_option_border_bg">

            <TextView
                android:id="@+id/tvOptionLetterA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:padding="22dp"
                android:textColor="#7A8089"
                android:textSize="20sp"
                android:text="A"/>
            <View
                android:layout_width="1dp"
                android:layout_marginVertical="12dp"
                android:layout_height="match_parent"
                android:background="#7A8089"/>
            <TextView
                android:id="@+id/tvOptionOneTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:padding="8dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Apple"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/llOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/default_option_border_bg">

            <TextView
                android:id="@+id/tvOptionLetterB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:padding="22dp"
                android:textColor="#7A8089"
                android:textSize="20sp"
                android:text="B"/>
            <View
                android:layout_width="1dp"
                android:layout_marginVertical="12dp"
                android:layout_height="match_parent"
                android:background="#7A8089"/>
            <TextView
                android:id="@+id/tvOptionTwoTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:padding="8dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Apple"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/default_option_border_bg">
            <TextView
                android:id="@+id/tvOptionLetterC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:padding="22dp"
                android:textColor="#7A8089"
                android:textSize="20sp"
                android:text="C"/>
            <View
                android:layout_width="1dp"
                android:layout_marginVertical="12dp"
                android:layout_height="match_parent"
                android:background="#7A8089"/>
            <TextView
                android:id="@+id/tvOptionThreeTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:padding="8dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Apple"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llOptionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/default_option_border_bg">
            <TextView
                android:id="@+id/tvOptionLetterD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:padding="22dp"
                android:textColor="#7A8089"
                android:textSize="20sp"
                android:text="D"/>
            <View
                android:layout_width="1dp"
                android:layout_marginVertical="12dp"
                android:layout_height="match_parent"
                android:background="#7A8089"/>
            <TextView
                android:id="@+id/tvOptionFourTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:padding="8dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Apple"/>

        </LinearLayout>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/design_default_color_primary"/>

    </LinearLayout>


</ScrollView>